# flott

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
conf/: README.rst
data/: README.rst
data/test/raw/: example.csv
docs/: conf.py  index.rst  services.rst
hooks/: pre_gen_project.py
scaffold/: __main__.py  example_test.py
scaffold/pipelines/: prepare.py  prepare_test.py
scaffold/services/: logging_test.py
src/: example.py
src/services/: logging.py
{{cookiecutter.repository_name}}/: .coveragerc  .flake8  .gitignore  README.rst  pyproject.toml
{{cookiecutter.repository_name}}/docs/: conf.py  index.rst  pipelines.rst
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/pipelines/: __init__.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/services/: logging.py
