[tool.poetry]
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
description = "{{ cookiecutter.project_description }}"
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.project_version }}"

[tool.poetry.dependencies]
click = "^7.1.2"
openpyxl = "^3.0.7"
pandas = "^1.2.3"
pyarrow = "^3.0.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docutils = "^0.16"
dvc = {extras = ["gdrive"], version = "^2.0.5"}
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
ipython = "^7.21.0"
isort = "^5.7.0"
mypy = "^0.812"
pre-commit = "^2.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
rstcheck = "^3.3.1"
sphinx = "^3.5.2"
sphinx_rtd_theme = "^0.5.1"

[tool.black]
line-length = 120

[tool.isort]
force_grid_wrap = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov={{ cookiecutter.package_name }} --cov-report term-missing:skip-covered"
filterwarnings = [
  "error::Warning", # If not ignored below, any warnings should fail tests
  "ignore: the imp module is deprecated:DeprecationWarning", # from h2o/utils/shared_utils.py:12
  "ignore: \"is not\" with a literal:SyntaxWarning", # from h2o/frame.py:2880
  "ignore: invalid escape sequence:DeprecationWarning", # from h2o/estimators/estimator_base.py:483 (and other places in h2o)
  "ignore: .*tree.iter:DeprecationWarning", # from xlrd/xlsx.py:312
  "ignore: .*error removing:pytest.PytestWarning", # from _pytest/pathlib.py:63 maybe triggered by pytest-xdist https://github.com/pytest-dev/pytest/issues/5974
  "ignore: Coverage disabled via --no-cov switch!:pytest.PytestWarning", # ignore stack trace when turning off test coverage intentionally via CLI
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
